--- a/.github/workflows/update_stats.yaml
+++ b/.github/workflows/update_stats.yaml
@@ -3,23 +3,19 @@ name: Waka Readme
 on:
   workflow_dispatch:
   schedule:
+    # Runs at 12am UTC
     - cron: '0 0 * * *'
 
 jobs:
   update-readme:
-    name: Profile Readme Development Stats
+    name: WakaReadme DevMetrics
     runs-on: ubuntu-latest
     steps:
-      - name: Daniil Litvinov
       - uses: danon6868/danon6868
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          SHOW_PROJECTS: "False"
-          SHOW_COMMIT: "True"
-          SHOW_LANGUAGE : "True"
-          SHOW_TIMEZONE: "False"
-          SHOW_EDITORS: "False"
-          SHOW_LOC_CHART: "False"
-          SHOW_PROFILE_VIEWS: "False"
-          SHOW_SHORT_INFO: "False"
-          SHOW_OS: "False"
+          SHOW_TITLE: true
+          BLOCKS: ->
+          TIME_RANGE: all_time
+          SHOW_TIME: true
+          SHOW_MASKED_TIME: true
