--- a/.github/workflows/update_stats.yaml
+++ b/.github/workflows/update_stats.yaml
@@ -11,7 +11,7 @@ jobs:
     name: WakaReadme DevMetrics
     runs-on: ubuntu-latest
     steps:
-      - uses: danon6868/danon6868
+      - uses: danon6868/danon6868@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           SHOW_TITLE: true
